# Git_API_Analyzer

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  plan.md  pyproject.toml  test_analysis_err.txt  test_err.txt  test_final.txt  test_out.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: cc5038a6672c_initial_migration.py
app/: main.py
app/analyzers/: activity_analyzer.py  contributor_analyzer.py  python_analyzer.py  scoring.py  structure_analyzer.py
app/api/: dependencies.py
app/api/v1/endpoints/: analysis.py  auth.py  health.py  reports.py  repositories.py  webhooks.py
app/core/: celery_app.py  config.py  logging.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  analysis_job.py  analysis_snapshot.py  finding.py  metric.py  repository.py  user.py  webhook_event.py
app/schemas/: analysis.py  report.py  repository.py  user.py
app/services/: analysis_service.py  auth_service.py  github_service.py  repository_service.py
app/workers/: tasks.py
repo_risk_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/integration/: test_analysis.py  test_auth.py  test_repositories.py
